Fixed the image clipping

--- a/css/style.css
+++ b/css/style.css
@@ -368,7 +368,6 @@ h2 {
     display: block;
     width: 100%;
     height: 300px;
-    min-width: 1330px;
 }
 
 #img1 {
@@ -387,4 +386,16 @@ h2 {
     position: relative;
     margin: 10px 0 10px 9%;
     height: 280px;
+}
+
+@media screen and (max-width: 1650px) {
+    #img3 {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 1050px) {
+    #img2 {
+        display: none;
+    }
 }
